
        RELEASE 2.4.1



2007/04/04
        RELEASE 2.4.0

        Improved Literal comparison / equality

        Sparql cleanup.

        getLiteralValue now returns the Literal object instead of the
        result of toPython().  Now that Literals override a good
        coverage of comparison operators, they should be passed around
        as first class objects in the SPARQL evaluation engine.

        Added support for session bnodes re: sparql

        Fixed prolog reduce/reduce conflict.  Added Py_None IncRefs
        where they were being passed into Python method invokations
        (per drewp's patch)

        Fixed sparql queries involving empty namespace prefix.

        Fixed the selected variables sparql issue

        Fixed <BASE> support in SPARQL queries.

        Fixed involving multiple unions and queries are nested more
        than one level (bug in _getAllVariables causing failure when
        parent.top is None)

        Fixed test_sparql_equals.py.

        Fixed sparql json result comma errors issue.

        Fixed test_sparql_json_results.py (SELECT * variables out of
        order)

        Added a 4Suite-based SPARQL XML Writer implementation.  If
        4Suite is not installed, the fallback python saxutils is used
        instead

        applied patch from
        http://rdflib.net/issues/2007/02/23/bugs_in_rdflib.sparql.queryresult/issue

        The restriction on GRAPH patterns with variables has been
        relieved a bit to allow such usage when the variable is
        provided as an initial binding

        Fix for OPTIONAL patterns.  P1 OPT P2, where P1 and P2 shared
        variables which were bound to BNodes were not unifying on
        these BNode variable efficiently / correctly.  The fix was to
        add bindings for 'stored' BNodes so they aren't confused for
        wildcards




        Added support to n3 parser for retaining namespace bindings.

        Fixed several RDFaParser bugs.
